added bootstrap templates

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <script src="assets/vendor/angular/angular.min.js"></script>
         <script src="assets/vendor/angular-route/angular-route.min.js"></script>
         <script src="assets/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
+        <script src="assets/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="assets/vendor/restangular/dist/restangular.min.js"></script>
         <script src="assets/vendor/angular-bindonce/bindonce.min.js"></script>
         <!-- endbuild -->
