Switched to gulp spa
Concat templates to main script file.

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,13 @@
         <title>Gulp Angular Starter Template</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- build:css app.css -->
+
+        <!-- build:css -->
         <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/main.css">
         <!-- endbuild -->
-        <!-- build:vendor vendor.js -->
+
+        <!-- build:vendor -->
         <script src="assets/vendor/lodash/dist/lodash.min.js"></script>
         <script src="assets/vendor/angular/angular.min.js"></script>
         <script src="assets/vendor/angular-route/angular-route.min.js"></script>
@@ -20,13 +22,11 @@
         <script src="assets/vendor/angular-bindonce/bindonce.min.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js app.js -->
+        <!-- build:js -->
         <script src="assets/js/app.js"></script>
         <script src="assets/js/controllers/users-ctrl.js"></script>
         <!-- endbuild -->
 
-        <!-- inject:js -->
-        <!-- endinject -->
     </head>
     <body>
         <ng-include src="'assets/partials/_nav.html'"></ng-include>
